; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_return_stmt.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_return_stmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@current_func_type = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @read_return_stmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_return_stmt() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = call i32* (...) @read_expr_opt()
  store i32* %3, i32** %2, align 8
  %4 = call i32 @expect(i8 signext 59)
  %5 = load i32*, i32** %2, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current_func_type, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32*, i32** %2, align 8
  %12 = call i32* @ast_conv(i32 %10, i32* %11)
  %13 = call i32* @ast_return(i32* %12)
  store i32* %13, i32** %1, align 8
  br label %16

14:                                               ; preds = %0
  %15 = call i32* @ast_return(i32* null)
  store i32* %15, i32** %1, align 8
  br label %16

16:                                               ; preds = %14, %7
  %17 = load i32*, i32** %1, align 8
  ret i32* %17
}

declare dso_local i32* @read_expr_opt(...) #1

declare dso_local i32 @expect(i8 signext) #1

declare dso_local i32* @ast_return(i32*) #1

declare dso_local i32* @ast_conv(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
